Fix stacking social icons on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,9 @@ u {
 .social-links li {
   display: inline-block;
   cursor: pointer;
+}
+
+.social-links-spacing {
   margin-right: 10px;
 }
 
